# RAG_KSUAI

./: CONTRIBUTING.md  README.md  build_clean_index.py  data2.json  flask_app.py  pyproject.toml  rag_system.py  requirements.txt  run.ps1
app/: cache.py  main.py  routes.py
src/rag_ksa_ai/: __init__.py  config.py  rag.py
src/rag_ksa_ai/data/: __init__.py  loader.py
src/rag_ksa_ai/generation/: __init__.py  formatters.py  ollama.py
src/rag_ksa_ai/indexing/: __init__.py  builder.py  store.py
src/rag_ksa_ai/retrieval/: __init__.py  filters.py  hybrid.py  scoring.py
src/rag_ksa_ai/text/: __init__.py  normalization.py  processing.py
static/: app.js  style.css
templates/: index.html
tools/: build_index.py  cli.py
